	PR libgcj/12416: 	* java/lang/Class.h: Updated. 	* java/lang/natClass.cc (_getFields): Removed. 	(getFields): Likewise. 	(getDeclaredFields): Added `public_only' parameter. 	* java/lang/Class.java (getFields): Now implemented in java; from 	Classpath. 	(getDeclaredFields): Likewise. 	(getDeclaredFields(boolean)): Declare. 	(_getFields): Removed. 	(internalGetFields): New method, from Classpath.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@72818 138bc75d-0d04-0410-961f-82ee72b054a4